--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,6 @@
 *.cmd text eol=crlf
 *.bat text eol=crlf
 *.ps1 text eol=crlf
-
 *.py  text eol=lf
 *.js  text eol=lf
 *.ts  text eol=lf
@@ -11,9 +10,10 @@
 *.json text eol=lf
 *.yml text eol=lf
 *.yaml text eol=lf
-
 *.png binary
 *.jpg binary
 *.jpeg binary
 *.gif binary
 *.pdf binary
+fixtures/*.sqlite filter=lfs diff=lfs merge=lfs -text
+fixtures/*.sqlite3 filter=lfs diff=lfs merge=lfs -text
